Rebrand plugin from Panharmonium to Solaire
Updates all class names, identifiers, and build configuration to reflect the Solaire branding while preserving technical documentation references to the Rossum Panharmonium architecture.

Changes:
- Rename PanharmoniumEngine → SolaireEngine (class and files)
- Rename PanharmoniumVoice → SolaireVoice
- Rename PanharmoniumAudioProcessor → SolaireAudioProcessor
- Update CMakeLists.txt project and plugin names
- Update all documentation headers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
-# Panharmonium - Spectral Harmonizer Plugin
+# Solaire - Spectral Harmonizer Plugin
 # CMake configuration based on official JUCE examples
 # Source: https://github.com/juce-framework/juce/blob/master/examples/CMake/AudioPlugin/CMakeLists.txt
 
 cmake_minimum_required(VERSION 3.22)
 
-project(PANHARMONIUM VERSION 1.0.0)
+project(SOLAIRE VERSION 1.0.0)
 
 # Fix for macOS Sequoia / Xcode 16 compatibility with JUCE 7
 # Source: https://forum.juce.com/t/fyi-juceaide-doesnt-compile-under-xcode-16-macos-sequoia/62836/17
@@ -23,12 +23,12 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(JUCE)
 
 # Define the plugin
-juce_add_plugin(Panharmonium
+juce_add_plugin(Solaire
     COMPANY_NAME "Solaire Audio"
     PLUGIN_MANUFACTURER_CODE Solo
     PLUGIN_CODE Pnhm
     FORMATS VST3 AU Standalone
-    PRODUCT_NAME "Panharmonium"
+    PRODUCT_NAME "Solaire"
     IS_SYNTH FALSE
     NEEDS_MIDI_INPUT FALSE
     NEEDS_MIDI_OUTPUT FALSE
@@ -38,15 +38,15 @@ juce_add_plugin(Panharmonium
     VST3_CATEGORIES Fx Modulation)
 
 # Add source files
-target_sources(Panharmonium
+target_sources(Solaire
     PRIVATE
         Source/PluginProcessor.cpp
         Source/PluginProcessor.h
-        Source/PanharmoniumEngine.cpp
-        Source/PanharmoniumEngine.h)
+        Source/SolaireEngine.cpp
+        Source/SolaireEngine.h)
 
 # Link JUCE modules
-target_link_libraries(Panharmonium
+target_link_libraries(Solaire
     PRIVATE
         juce::juce_audio_utils
         juce::juce_audio_processors
@@ -57,7 +57,7 @@ target_link_libraries(Panharmonium
         juce::juce_recommended_warning_flags)
 
 # Set compile definitions
-target_compile_definitions(Panharmonium
+target_compile_definitions(Solaire
     PUBLIC
         JUCE_WEB_BROWSER=0
         JUCE_USE_CURL=0
